checkbox align bug fix

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -471,11 +471,23 @@
                     &+.checkbox {
                         width: 1em;
                         height: 1em;
-                        display: inline-block;
+                        display: inline-flex;
+                        justify-content: center;
+                        align-items: center;
                         border: 1px solid var(--colorBorder);
                         background-color: var(--colorBackground);
                         border-radius: 50%;
                         cursor: pointer;
+
+                        &::before {
+                            content: '';
+                            display: block;
+                            width: 70%;
+                            height: 70%;
+                            background-color: var(--colorMain);
+                            border-radius: 50%;
+                            opacity: 0;
+                        }
 
                         &:hover {
                             background-color: var(--colorBackgroundDim);
@@ -486,13 +498,7 @@
                         border-color: var(--colorMain);
 
                         &::before {
-                            content: '';
-                            display: block;
-                            width: 100%;
-                            height: 100%;
-                            background-color: var(--colorMain);
-                            border-radius: 50%;
-                            transform: scale(.65);
+                            opacity: 100;
                         }
                     }
                 }
@@ -527,6 +533,7 @@
                 &.checkboxes {
                     label {
                         display: inline-flex;
+                        justify-content: center;
                         align-items: center;
                         gap: .4em;
                         margin-left: 2em;
